--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,10 +3,18 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
-ext.anko_version='0.10.4'
+ext.anko_version = '0.10.4'
 
 android {
     compileSdkVersion 27
+    signingConfigs {
+        release {
+            keyAlias "cyberpunk"
+            keyPassword "cyberpunk"
+            storeFile file("cyberpunk.jks")
+            storePassword "cyberpunk"
+        }
+    }
     defaultConfig {
         applicationId "com.y2thez.cyberpad"
         minSdkVersion 19
@@ -17,7 +25,8 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            signingConfig signingConfigs.release
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -29,18 +38,19 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:27.1.0'
-    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-vector-drawable:27.1.0'
-    implementation 'com.android.support:support-v4:27.1.0'
+    implementation 'com.android.support:support-vector-drawable:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.romainpiel.shimmer:library:1.4.0@aar'
-    compile 'com.github.xizzhu:simple-tool-tip:0.6.1'
+    implementation 'com.github.xizzhu:simple-tool-tip:0.6.1'
 
     // Anko Commons
-    compile "org.jetbrains.anko:anko-commons:$anko_version"
+    implementation "org.jetbrains.anko:anko-commons:$anko_version"
 
     // Anko Layouts
-    compile "org.jetbrains.anko:anko-sdk25:$anko_version" 
-    compile "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
+    implementation "org.jetbrains.anko:anko-sdk25:$anko_version"
+    implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
+
 }
