--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
-        versionName "1.0"
+        versionName "1.1"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
@@ -53,4 +53,6 @@ dependencies {
     implementation "org.jetbrains.anko:anko-sdk25:$anko_version"
     implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
 
+    //fonts
+    implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
 }
