--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,8 @@ android {
         applicationId "com.y2thez.cyberpad"
         minSdkVersion 19
         targetSdkVersion 27
-        versionCode 2
-        versionName "1.2"
+        versionCode 4
+        versionName "1.4"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
@@ -55,4 +55,7 @@ dependencies {
 
     //fonts
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
+    implementation 'com.google.firebase:firebase-database:11.8.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
